# ge-flash-briefing

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
aggregator/: Cargo.toml
aggregator/src/: lib.rs
conf/: sources-example.toml
public_html/public_html/src/components/Headlines/: Headlines.js
public_html/public_html/src/components/Stock/: Stock.js
react-webui/public/: index.html
react-webui/src/components/App/: App.js
react-webui/src/components/Headlines/: Headlines.css  Headlines.js
src/: analyzer.rs  event.rs  finance.rs  main.rs  server.rs
src/lib/: database.rs  source.rs
webui/: package-lock.json  package.json
webui/public/: index.html
webui/src/components/App/: App.js
webui/src/components/Heading/: Heading.css  Heading.js
webui/src/components/Headlines/: Headlines.js
webui/src/components/Stock/: Stock.css  Stock.js
