[package]
name = "ge-flash-breifing"
version = "0.1.0"
authors = ["not-inept <mason@notinept.me>"]

[dependencies]
rocket = "*"
rocket_codegen = "0.3.3"
diesel = "*"
serde_json = "*"
scraper = "*"
config = "*"
aggregator = { path = "aggregator"}
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

[workspace]
